Add systemctl commands.

--- a/docker/phpmyadmin/Makefile
+++ b/docker/phpmyadmin/Makefile
@@ -3,3 +3,5 @@ install:
 	mkdir -p /opt/phpmyadmin
 	cp docker-compose.yml /opt/phpmyadmin/docker-compose.yml
 	cp phpmyadmin.service /etc/systemd/system/phpmyadmin.service
+	systemctl daemon-reload
+	systemctl restart phpmyadmin
