--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -13,7 +13,7 @@ server {
 }
 
 server {
-    listen 443;
+    listen 443 ssl;
     server_name phpmyadmin.icfpc.sx9.jp;
     ssl_certificate /data/domain-fullchain.pem;
     ssl_certificate_key /data/domain-privkey.pem;
