Set up Docker host.

--- a/docker/nginx/docker-compose.yml
+++ b/docker/nginx/docker-compose.yml
@@ -1,7 +1,13 @@
 version: '3'
 
 services:
-  mysql:
-    image: imos/icfpc2020:nginx
-    ports:
-      - 443:443
+    docker-host:
+        image: qoomon/docker-host
+        cap_add: [ 'NET_ADMIN', 'NET_RAW' ]
+        mem_limit: 8M
+        restart: on-failure
+    nginx:
+        image: imos/icfpc2020:nginx
+        depends_on: [ docker-host ]
+        ports:
+          - 443:443
