--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -18,6 +18,6 @@ server {
     ssl_certificate /data/domain-fullchain.pem;
     ssl_certificate_key /data/domain-privkey.pem;
     location / {
-        proxy_pass http://127.0.0.1:4040;
+        proxy_pass http://docker-host:4040;
     }
 }
