--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -18,6 +18,8 @@ server {
     ssl_certificate /data/domain-fullchain.pem;
     ssl_certificate_key /data/domain-privkey.pem;
     location / {
+        auth_basic "user=unagi, pass=UNAGI_PASSWORD";
+        auth_basic_user_file /etc/nginx/htpasswd;
         proxy_pass http://docker-host:4040;
     }
 }
