--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -14,4 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Test
+      env:
+        UNAGI_GITHUB_TOKEN: ${{ secrets.UNAGI_GITHUB_TOKEN }}
       run: bash script/create-submission.sh
