Run git config.

--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -16,4 +16,7 @@ jobs:
     - name: Test
       env:
         UNAGI_GITHUB_TOKEN: ${{ secrets.UNAGI_GITHUB_TOKEN }}
-      run: bash script/create-submission.sh
+      run: >
+        git config --global user.email "5896564+ninetan@users.noreply.github.com"
+        git config --global user.name "ninetan"
+        bash script/create-submission.sh
