--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2018"
 [dependencies]
 tokio = { version = "0.2.21", features = ["macros"] }
 hyper = "0.13.5"
+hyper-tls = "*"
 http-body = "0.3.1"
 num = "*"
+futures = "*"
