--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -11,7 +11,7 @@ env:
 jobs:
   submit:
     runs-on: ubuntu-latest
-
+    timeout-minutes: 10
     steps:
     - uses: actions/checkout@v2
     - name: Test
