Implement to_text.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.watcherExclude": {
         "**/.cache/**": true,
         "**/vendor/**": true
-    }
+    },
+    "editor.insertSpaces": false
 }
