--- a/.github/workflows/operators.yml
+++ b/.github/workflows/operators.yml
@@ -1,4 +1,4 @@
-name: Galaxy
+name: Operators
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
