--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ rand = "*"
 image = "*"
 colorous = "*"
 follow-redirects = "*"
-reqwest = "*"
+reqwest = { version = "*", features = ["blocking"] }
 structopt = "*"
 
 [profile.release]
